Fixed selection/invisibles

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,13 +4,13 @@
 // General colors
 @syntax-text-color       : #E6E1DC;
 @syntax-cursor-color     : #FFFFFF;
-@syntax-selection-color  : rgba(90, 100, 126, 1);
+@syntax-selection-color  : rgba(90, 100, 126, .5);
 @syntax-background-color : #232323;
 
 // Guide colors
 @syntax-wrap-guide-color          : #404040;
 @syntax-indent-guide-color        : #404040;
-@syntax-invisible-character-color : #404040;
+@syntax-invisible-character-color : rgba(64,64,64,.5);
 
 // For find and replace markers
 @syntax-result-marker-color          : #404040;
